zeppelin-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeppelin-server
  namespace: spark
  labels:
    app.kubernetes.io/name: zeppelin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zeppelin-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zeppelin-server
    spec:
      serviceAccountName: zeppelin-server
      volumes:
        - name: nginx-conf
          configMap:
            name: zeppelin-server-conf
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: zeppelin-server-notebook-volume
          persistentVolumeClaim:
            claimName: zeppelin-notebook-pvc
        - name: zeppelin-server-custom-k8s
          persistentVolumeClaim:
            claimName: zeppelin-custom-k8s-pvc
        - name: zeppelin-server-conf
          persistentVolumeClaim:
            claimName: zeppelin-server-conf-pvc
      containers:
        - name: zeppelin-server
          image: apache/zeppelin:0.10.0
          command: ["sh", "-c", "$(ZEPPELIN_HOME)/bin/zeppelin.sh"]
          lifecycle:
            preStop:
              exec:
                # SIGTERM triggers a quick exit; gracefully terminate instead
                command:
                  [
                    "sh",
                    "-c",
                    "ps -ef | grep org.apache.zeppelin.server.ZeppelinServer | grep -v grep | awk '{print $2}' | xargs kill",
                  ]
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
            - name: rpc
              containerPort: 12320
          volumeMounts:
            - name: zeppelin-server-notebook-volume # configure this to persist notebook
              mountPath: /opt/zeppelin/notebook
            - name: zeppelin-server-conf # configure this to persist Zeppelin configuration
              mountPath: /opt/zeppelin/conf
            - name: zeppelin-server-custom-k8s # configure this to mount customized Kubernetes spec for interpreter
              mountPath: /opt/zeppelin/k8s
          resources:
            limits:
              cpu: "1"
              memory: 4096Mi
            requests:
              cpu: 500m
              memory: 2048Mi
        - name: zeppelin-server-gateway
          image: nginx:1.14.0
          command: ["/bin/sh", "-c"]
          args:
            - cp -f /tmp/conf/nginx.conf /etc/nginx/nginx.conf;
              sed -i -e "s/SERVICE_DOMAIN/$SERVICE_DOMAIN/g" /etc/nginx/nginx.conf;
              sed -i -e "s/NAMESPACE/$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace)/g" /etc/nginx/nginx.conf;
              cat /etc/nginx/nginx.conf;
              /usr/sbin/nginx
          volumeMounts:
            - name: nginx-conf
              mountPath: /tmp/conf
          lifecycle:
            preStop:
              exec:
                # SIGTERM triggers a quick exit; gracefully terminate instead
                command: ["/usr/sbin/nginx", "-s", "quit"]
          resources:
            limits:
              cpu: 50m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 512Mi
        - name: dnsmasq # nginx requires dns resolver for dynamic dns resolution
          image: "janeczku/go-dnsmasq:release-1.0.5"
          args:
            - --listen
            - "127.0.0.1:53"
            - --default-resolver
            - --append-search-domains
            - --hostsfile=/etc/hosts
            - --verbose
          resources:
            limits:
              cpu: 50m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 512Mi
---
kind: Service
apiVersion: v1
metadata:
  name: zeppelin-server
  namespace: spark
spec:
  ports:
    - name: http
      port: 80
    - name: rpc # port name is referenced in the code. So it shouldn't be changed.
      port: 12320
  selector:
    app.kubernetes.io/name: zeppelin-server
